tests/specs/type_literal_declaration.txt
# mod.ts
export type T = {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type T = {}
  | ^

# output.txt
Defined in file:///mod.ts:0:1

type T = { }


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "T",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "typeAlias",
          "def": {
            "tsType": {
              "repr": "",
              "kind": "typeLiteral",
              "value": {
                "constructors": [],
                "methods": [],
                "properties": [],
                "callSignatures": [],
                "indexSignatures": []
              }
            },
            "typeParams": []
          }
        }
      ]
    }
  ]
}
